Fixed mobile to desktop font and spacing changes.

--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ body {
 @media screen and (width <= 840px) {
   .header {
     justify-content: center;
+    padding-inline: 1.5rem; /* (m) 24px -> (d) 64px */
   }
   [aria-controls=primary-nav] {
     position: absolute;
@@ -377,6 +378,16 @@ body {
   text-transform: uppercase;
 }
 
+@media screen and (width > 840px) {
+  .slide__heading {
+    font-size: 3rem; /* (m) 40px -> (d) 48px */
+    letter-spacing: -2px; /* (m) -1.67px -> (d) -2px */
+  }
+  .section__heading {
+    font-size: 1rem; /* (m) 14px -> (d) 16px */
+    letter-spacing: 5px; /* (m) 5.83px -> (d) 5px */
+  }
+}
 .slide__description,
 .section__text {
   color: var(--clr-dark-gray);
@@ -491,11 +502,17 @@ body {
   }
 }
 .about__text {
-  padding-inline: 2rem; /* (m) 32px -> (d) ? */
+  padding-inline: 2rem; /* (m) 32px -> (d) 48px */
   padding-block: 3.0625rem; /* (m) 49px -> (d) ? */
   display: grid;
   gap: 0.9375rem; /* (m) 15px -> (d) 16px */
 }
 
+@media screen and (width > 840px) {
+  .about__text {
+    padding-inline: 3rem; /* (m) 32px -> (d) 48px */
+    gap: 1rem; /* (m) 15px -> (d) 16px */
+  }
+}
 /* ----- END ----- */
 /* ----- END ----- */
